# Parcial-2-Pruebas

./: .coverage  .gitignore  README.md  locustfile.py  main.py  pyproject.toml  reporte_locust.html
.github/workflows/: ci.yml
app/: api.py  recarga.py
features/: recarga.feature
features/steps/: recarga_steps.py
tests/: test_api.py  test_recarga.py
