[project]
name = "parcial-2-pruebas"
version = "0.1.0"
description = "Módulo de recargas celulares - RecargaYa S.A.S."
requires-python = ">=3.12"
dependencies = [
    "behave>=1.3.3",
    "fastapi>=0.136.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.49.0",
    "locust>=2.32.0",
    "httpx2>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]
